deploy/k8s/apps/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxiagent-client-service
  namespace: taxiagent
spec:
  type: ClusterIP
  selector:
    app: taxiagent-client-service
  ports:
    - name: http
      port: 80
      targetPort: http
